about me, portfolio panel

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html {
   position: relative;
   min-height: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #jumbotron {
@@ -12,4 +14,59 @@ html {
 #jumbotron > div::before {
   content: "";
   opacity: 0.5;
+}
+
+a img {
+  width: 40px;
+  margin-top: -9px;
+}
+
+#aboutme img {
+  /*width: 170px;*/
+  /*float: left;*/
+  width: 200px;
+  flex: 0 1 200px;
+  border-radius: 50%;
+  margin: 0 10px;
+}
+ 
+.wrapper {
+  width: 70%;
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-flow: row wrap;
+}
+
+.wrapper > h1, h3 {
+  font-family: Bungee;
+  flex: 0 1 100%;
+  text-align: center;
+}
+
+#aboutme {
+    position: absolute;
+    width: 100%;
+    height: 200%;
+}
+
+#projects {
+ position: absolute;
+ width: 100%;
+ height: 300%;
+
+}
+
+#about {
+  background-color: grey;
+}
+
+#portfolio {
+  height: 33.33%;
+  top: 66.66%;
+  background-color: blue;
 }
