--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a img {
   margin-top: -9px;
 }
 
-#aboutme img {
+#about img {
   /*width: 170px;*/
   /*float: left;*/
   width: 200px;
@@ -29,29 +29,42 @@ a img {
   border-radius: 50%;
   margin: 0 10px;
 }
- 
-.wrapper {
-  width: 70%;
-  height: 50%;
-  top: 50%;
+
+#profileContent {
   position: absolute;
+  top:100%;
+  width:100%;
+  height:100%;
+}
+#about{
+  padding: 30px 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  align-content: center;
   flex-flow: row wrap;
 }
 
-.wrapper > h1, h3 {
+#about > div {
+  width: 80%;
+}
+.wrapper > h1{
   font-family: Bungee;
   flex: 0 1 100%;
   text-align: center;
 }
 
+/*#skills > div {
+  width: 80%;
+}*/
+
+.wrapper h3 {
+    font-family: Bungee;
+}
+
 #aboutme {
-    position: absolute;
-    width: 100%;
-    height: 200%;
+  top: 100%;
+  position: absolute;
+  width: 100%;
 }
 
 #projects {
@@ -61,12 +74,34 @@ a img {
 
 }
 
-#about {
-  background-color: grey;
+@media screen and (min-width: 1120px) {
+    #about, #skills {
+      padding: 30px 10%;
+    }
 }
 
-#portfolio {
+@media screen and (min-width: 1600px) {
+    #about, #skills {
+      padding: 30px 15%;
+    }
+}
+
+.skills {
+  padding: 10px 10%;
+}
+#progressBar, #progress {
+  opacity: 0.9;
+  height: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px grey;
+}
+
+/*#about {
+  background-color: grey;
+}*/
+
+/*#portfolio {
   height: 33.33%;
   top: 66.66%;
-  background-color: blue;
-}
+  background-color: ;
+}*/
