--- a/style.css
+++ b/style.css
@@ -1,19 +1,5 @@
-html {
-  position: relative;
-  min-height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-#jumbotron {
-  position: absolute;
-  width: 100%;
-  height:100%;
-}
-
-#jumbotron > div::before {
-  content: "";
-  opacity: 0.5;
+html, body {
+  height: 100%;
 }
 
 a img {
@@ -36,6 +22,7 @@ a img {
   width:100%;
   height:100%;
 }
+
 #about{
   padding: 30px 0;
   display: flex;
@@ -47,24 +34,17 @@ a img {
 #about > div {
   width: 80%;
 }
-.wrapper > h1{
+
+#about > h1,
+#skills > h1,
+#portfolio > h1{
   font-family: Bungee;
   flex: 0 1 100%;
   text-align: center;
 }
 
-/*#skills > div {
-  width: 80%;
-}*/
-
-.wrapper h3 {
+#skills h3 {
     font-family: Bungee;
-}
-
-#aboutme {
-  top: 100%;
-  position: absolute;
-  width: 100%;
 }
 
 #projects {
@@ -72,18 +52,6 @@ a img {
  width: 100%;
  height: 300%;
 
-}
-
-@media screen and (min-width: 1120px) {
-    #about, #skills {
-      padding: 30px 10%;
-    }
-}
-
-@media screen and (min-width: 1600px) {
-    #about, #skills {
-      padding: 30px 15%;
-    }
 }
 
 .skills {
@@ -96,12 +64,48 @@ a img {
   box-shadow: 0 0 5px grey;
 }
 
-/*#about {
-  background-color: grey;
-}*/
+.skillsProgress {
+  width: 50%;
+  padding: 0 20px;
+  display: inline-block;
+}
 
-/*#portfolio {
-  height: 33.33%;
-  top: 66.66%;
-  background-color: ;
-}*/
+#portfolio {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;  
+}
+.project {
+  margin: 10px 20px;
+  flex: 0 1 auto;
+  display: inline-block;
+  text-align: center;
+  background-color: #1c1e22;
+}
+
+.project > img {
+  padding: 5px;
+  width: 100%;
+}
+
+.project:hover,
+.project:hover img {
+  opacity: 0.9;
+  background-color: #4b4b4b;
+}
+.project > div {
+  color: white;
+  padding: 10px 20px;
+  font-size: 20px;
+}
+@media screen and (min-width: 1120px) {
+    #about, #skills {
+      padding: 30px 10%;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    #about, #skills {
+      padding: 30px 15%;
+    }
+}
