--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a img {
   /*width: 170px;*/
   /*float: left;*/
   width: 200px;
-  flex: 0 1 200px;
+  -webkit-flex: 0 1 200px;
   border-radius: 50%;
   margin: 0 10px;
 }
@@ -24,11 +24,12 @@ a img {
 }
 
 #about{
-  padding: 30px 0;
-  display: flex;
+  padding-top: 50px;
+  display: -webkit-flex;
+  -webkit-justify-content: center;
   justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
+  -webkit-align-items: center;
+  -webkit-flex-flow: row wrap;
 }
 
 #about > div {
@@ -39,12 +40,23 @@ a img {
 #skills > h1,
 #portfolio > h1{
   font-family: Bungee;
-  flex: 0 1 100%;
+  -webkit-flex: 0 1 100%;
   text-align: center;
+}
+
+#about h3 {
+  font-family: Bungee;
+  -webkit-flex: 0 1 100%;
+}
+
+#skills {
+  padding-top: 50px;
 }
 
 #skills h3 {
     font-family: Bungee;
+    -webkit-flex: 0 1 100%;
+    text-align: center;
 }
 
 #projects {
@@ -55,29 +67,39 @@ a img {
 }
 
 .skills {
-  padding: 10px 10%;
+  padding: 30px 10%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+
 }
 #progressBar, #progress {
   opacity: 0.9;
-  height: 20px;
+  height: 15px;
   border-radius: 10px;
   box-shadow: 0 0 5px grey;
 }
 
 .skillsProgress {
-  width: 50%;
-  padding: 0 20px;
+  -webkit-flex: 0 1 auto;
   display: inline-block;
+  text-align: center;
+}
+
+.skillsProgress >img {
+  width: 50%;
 }
 
 #portfolio {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;  
+  display: -webkit-flex;
+  -webkit-flex-flow: row wrap;
+  -webkit-justify-content: center;  
+  justify-content: center;
 }
 .project {
+  position: relative;
   margin: 10px 20px;
-  flex: 0 1 auto;
+  -webkit-flex: 0 1 auto;
   display: inline-block;
   text-align: center;
   background-color: #1c1e22;
@@ -88,24 +110,45 @@ a img {
   width: 100%;
 }
 
-.project:hover,
+/*.project:hover,
 .project:hover img {
   opacity: 0.9;
   background-color: #4b4b4b;
-}
-.project > div {
+}*/
+.projectTitle {
   color: white;
   padding: 10px 20px;
   font-size: 20px;
 }
+
 @media screen and (min-width: 1120px) {
-    #about, #skills {
+    #about {
       padding: 30px 10%;
     }
 }
 
 @media screen and (min-width: 1600px) {
-    #about, #skills {
+    #about {
       padding: 30px 15%;
     }
+}
+
+.projectLinks {
+  display: -webkit-flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  position: absolute;
+}
+
+.projectLinks img {
+  width: 50%;
+  height: 50%
+}
+
+.projectLinks img:hover {
+  width: 80%;
 }
