--- a/style.css
+++ b/style.css
@@ -196,5 +196,47 @@ a img {
 }
 
 .projectLinks img:hover {
-  width: 80%;
+  width: 70%;
+}
+
+footer {
+  display: flex;
+  display: -webkit-flex;
+  display: -moz-flex;
+  -moz-justify-content: space-around;
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
+  align-items: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  height: 100px;
+  background-color: #222;
+  color: white;
+}
+
+footer > div {
+  font-size: 15px;
+  flex: 0 1 auto;
+  -webkit-flex: 0 1 auto;
+  -moz-flex: 0 1 auto;
+}
+
+footer a {
+  text-decoration: none;
+  color: white;
+}
+
+footer a:hover {
+  text-decoration: underline;
+  color: white;
+}
+
+footer a:visited,
+footer a:active {
+  text-decoration: none;
+  color: white; 
+}
+
+footer i {
+  margin-right: 5px;
 }
